docs/tests/parser/concurrency/valid/LockNested.src
fn void test() {
    lock (mutexA) {
        lock (mutexB) {
            x = x + 1;
        }
    }
}
