docs/tests/parser/concurrency/invalid/LockMissingOpenBrace.src
fn void test() {
    lock (myMutex)
        x++;
}
